--- a/abc.html
+++ b/abc.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>abc</title>
-
-</head>
-<body>
-<p>iahbrvbajernvjnaroenv</p>
-
+    <head>
+        <meta charset="UTF-8">
+        <title>HTML links</title>
+    </head>
+    <body>
+        <h1>HTML: HyperText Markup Language</h1>
+        <p title="nhìn vào anh này">Tim Berners-Lee invented the first browser at CERN, to enable researchers to share their research with eachother.</p>
+        <a target="_blank" href="http://home.web.cern.ch/topics/birth-web">
+            Read more about the history of HTML
+            <p>
+                <img src="https://www.kasandbox.org/programming-images/misc/tim-berners-lee-webpage.png" width="300" alt =  "không hiển thị được ảnh rồi">
+                <br/>Image courtesy CERN akshbvribarijvba
+            </p>
+        </a>
 </body>
 </html>
